Closed
Bug 60683
Opened 25 years ago
Closed 23 years ago
[FIX]modifying style attribute doesn't change .style property for elements not in the document
Categories
(Core :: DOM: CSS Object Model, defect, P1)
Core
DOM: CSS Object Model
Tracking
()
RESOLVED
FIXED
mozilla1.2alpha
People
(Reporter: giscard.girard, Assigned: bzbarsky)
References
Details
(Keywords: dom2)
Attachments
(4 files)
373 bytes,
text/html
|
Details | |
842 bytes,
text/html
|
Details | |
362 bytes,
text/html
|
Details | |
3.38 KB,
patch
|
john
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
<html><body></body>
<script>
var d = document.createElement("DIV");
d.setAttribute("style","height:50px");
alert(d.style.height);
document.body.appendChild(d);
alert(d.style.height);
</script>
</html>
The first alert in the above example would display "", the second alert would
display 50px.
To clarify, the expected behavior is that both return 50px.
Confirming bug.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 3•25 years ago
|
||
I see why this is happening, but there are more important problems to fix now so
I'm futuring this for now. Please speak up if you disagree.
Status: NEW → ASSIGNED
OS: Windows NT → All
Hardware: PC → All
Target Milestone: --- → Future
Updated•24 years ago
|
Component: DOM Level 2 → DOM Style
Comment 4•24 years ago
|
||
Taking QA Contact on all open or unverified DOM Style bugs...
QA Contact: vidur → ian
Comment 6•24 years ago
|
||
![]() |
||
Comment 7•23 years ago
|
||
Bumping up the tally of people that have found this to be a problem.
![]() |
Assignee | |
Comment 8•23 years ago
|
||
![]() |
Assignee | |
Comment 9•23 years ago
|
||
![]() |
Assignee | |
Comment 10•23 years ago
|
||
taking.
Assignee: jst → bzbarsky
Status: ASSIGNED → NEW
Priority: P3 → P1
Target Milestone: Future → mozilla1.2alpha
Comment 11•23 years ago
|
||
Comment on attachment 94824 [details] [diff] [review]
Patch to fix
r=jkeiser
Attachment #94824 -
Flags: review+
![]() |
Assignee | |
Updated•23 years ago
|
Summary: modifying style attribute doesn't change .style property for elements not in the document → [FIX]modifying style attribute doesn't change .style property for elements not in the document
Comment on attachment 94824 [details] [diff] [review]
Patch to fix
sr=dbaron
Attachment #94824 -
Flags: superreview+
![]() |
Assignee | |
Comment 13•23 years ago
|
||
checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•