Parse style attrs on elements not in the tree. Bug 60683, r=jkeiser, sr=dbaron